--- a/CSS/film.css
+++ b/CSS/film.css
@@ -160,13 +160,24 @@
   }
   
   /* video player */
-  .film-player video{
+  .film-player.youtube{
+    position: relative;
     width: 100%;
-    display: block;
+    aspect-ratio: 16 / 9;
     border-radius: 6px;
     border: 6px solid var(--orange);
     box-shadow: 0 16px 40px rgba(0,0,0,0.2);
+    overflow: hidden;
   }
+  
+  .film-player.youtube iframe{
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+  
   
   /* desktop layout */
   @media (min-width: 900px){
